# server-side-query-fan-out-session-reporting

./: .gitignore  .publicrepo  .sops.yaml.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.tmp/export_cli_test/: cli_test.csv  cli_test.xlsx  filtered_cli.csv
data/: dead_letter.jsonl  sample_requests.jsonl
docs/: ai-bot-user-agents.md  architecture.md  backend-guide.md  dashboard-guide.md  excel-export.md  migration-all-versions.md  migration-v1-to-v2.md  migration-v2.1.1-to-v2.1.2.md  processing-modes.md  query-fanout-sessions.md  reporting-excel.md  security.md  sitemap-analysis.md  url-filtering.md
docs/development/: contributing.md
docs/ingestion/: README.md  adding-providers.md  cli-usage.md  performance-tuning.md  security.md  troubleshooting.md  universal-format.md
docs/ingestion/providers/: akamai-format.md  aws-alb-format.md  aws-cloudfront.md  cloudflare.md  fastly-format.md  gcp-cdn-format.md  other-providers.md
docs/sops/: README.md  daily-usage.md  key-management.md  quickstart.md  scheduling.md  troubleshooting.md
docs/testing/: performance-report.md
scripts/: analyze_temporal_patterns.py  backfill_sessions.py  daily_pipeline.sh  docker-shell.sh  export_session_report.py  generate_sample_data.py  ingest_logs.py  plot_window_comparison.py  run_aggregations.py  run_dashboard_queries.py  run_ip_network_experiment.py  run_multi_domain.py  run_pipeline.py  run_quality_checks.py  run_window_experiment.py
scripts/migrations/: add_source_provider_column.py  migrate_add_domain_to_sitemap_tables.py  migrate_dedup_sitemap_urls.py  migrate_fix_url_performance_unique_key.py  migrate_remove_bot_management_columns.py  migrate_v1_to_v2.py
src/llm_bot_pipeline/: __init__.py
src/llm_bot_pipeline/cloudflare/: __init__.py  filters.py  logpull.py
src/llm_bot_pipeline/config/: __init__.py  constants.py  logging_config.py  settings.py  sops_loader.py
src/llm_bot_pipeline/infrastructure/: __init__.py
src/llm_bot_pipeline/ingestion/: __init__.py  base.py  exceptions.py  file_utils.py  registry.py  security.py  validation.py
src/llm_bot_pipeline/ingestion/parsers/: __init__.py  csv_parser.py  json_parser.py  schema.py  w3c_parser.py
src/llm_bot_pipeline/ingestion/providers/: __init__.py
src/llm_bot_pipeline/monitoring/: __init__.py  data_quality.py  metrics_export.py  retry_handler.py
src/llm_bot_pipeline/monitoring/checkers/: __init__.py  duplicate.py  freshness.py  models.py  record_count.py  schema.py  unified.py
src/llm_bot_pipeline/pipeline/: __init__.py  backfill.py  backfill_state.py  checkpoint.py  exceptions.py  local_pipeline.py  python_transformer.py  router.py  sql_compat.py  sql_utils.py  streaming_pipeline.py
src/llm_bot_pipeline/pipeline/stages/: __init__.py  checkpoint_ops.py  data_ops.py  insert.py  result.py  sql_builder.py
src/llm_bot_pipeline/reporting/: __init__.py  excel_exporter.py  freshness_tracker.py  local_aggregations.py  local_dashboard_queries.py  models.py  reporting_utils.py  session_aggregations.py  session_refiner.py  session_storage_writer.py  sitemap_aggregations.py  temporal_bundler.py
src/llm_bot_pipeline/reporting/local_queries/: __init__.py  base.py  kpi.py  refinement.py  session.py  timeseries.py
src/llm_bot_pipeline/research/: __init__.py  experiment_runner.py  fingerprint_analysis.py  semantic_embeddings.py  session_refinement.py  temporal_analysis.py  window_optimizer.py
src/llm_bot_pipeline/schemas/: __init__.py  bundles.py  clean.py  converters.py  raw.py  reporting.py
src/llm_bot_pipeline/sitemap/: __init__.py  parser.py
src/llm_bot_pipeline/storage/: __init__.py  base.py  bigquery_backend.py  bigquery_schemas.py  disk_space.py  factory.py  sqlite_backend.py  sqlite_schemas.py
src/llm_bot_pipeline/utils/: __init__.py  bot_classifier.py  date_utils.py  http_utils.py  path_utils.py  url_classifier.py  url_utils.py
tests/: __init__.py  conftest.py
tests/fixtures/ingestion/akamai/: README.md  edge_cases.json  sample.json  sample.ndjson
tests/fixtures/ingestion/aws_alb/: README.md
tests/fixtures/ingestion/azure_cdn/: sample.csv  sample.json  sample.ndjson  sample_log_analytics.json
tests/fixtures/ingestion/cloudflare/: sample.csv  sample.json  sample.ndjson
tests/integration/: __init__.py  conftest.py  test_backfill_sessions.py  test_cross_mode_equivalence.py  test_end_to_end.py  test_export_session_report.py  test_ingestion_workflows.py  test_local_bq_buffered_e2e.py  test_local_pipeline_dual_backend.py  test_migrations.py  test_pipeline.py  test_pipeline_session_integration.py  test_query_fanout_sessions_schema.py  test_reporting.py  test_reporting_utils.py  test_session_aggregator.py  test_session_dashboard_queries.py  test_session_url_details_population.py  test_sitemap_aggregations.py  test_storage_backend.py  test_streaming_pipeline_integration.py  test_url_filtering_integration.py
tests/performance/: __init__.py  conftest.py  test_ingestion_performance.py
tests/unit/: __init__.py  conftest.py  test_backfill_state.py  test_batch_insert_fallback.py  test_bigquery_views.py  test_bot_classifier.py  test_checkpoint.py  test_data_quality.py  test_date_utils.py  test_disk_space_check.py  test_error_log_context.py  test_excel_exporter.py  test_experiment_runner.py  test_export_sheets.py  test_file_utils.py  test_freshness_tracker_stale_data.py  test_get_pipeline.py  test_http_utils.py  test_ingestion_adapters.py  test_ingestion_base.py  test_ingestion_parsers.py  test_ingestion_security.py  test_ingestion_validation.py  test_json_logging.py  test_models_validation.py  test_order_by_validation.py  test_path_validation.py  test_pipeline_router.py  test_python_transformer.py  test_research.py  test_run_pipeline_script.py  test_schemas.py  test_semantic_embeddings.py  test_session_refiner.py  test_session_storage_writer.py  test_settings_processing_mode.py  test_sitemap_init.py  test_sitemap_parser.py  test_sops_loader.py  test_sql_compat.py  (+13 more)
(+29 files in other folders)
